# chatbot

./: .gitignore  .prospector.yaml  CHANGELOG.md  README.md  pylama.ini  pyproject.toml
.github/workflows/: python-ci.yml
deltachat_chatbot/: __init__.py  gpt4all.py  hooks.py  openai.py  orm.py  quota.py  utils.py
