[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "deltachat-chatbot"
description = "Conversational chat-bot for Delta Chat"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.10"
keywords = ["deltachat", "bot", "chatbot", "ai"]
authors = [
  {name = "adbenitez", email = "adb@arcanechat.me"},
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
]
dependencies = [
    "deltabot-cli>=8.1.0,<9.0",
    "gpt4all>=2.6.0,<3.0",
]

[project.urls]
Homepage = "https://github.com/deltachat-bot/chatbot"

[project.optional-dependencies]
dev = [
  "black",
  "isort",
  "prospector[with-mypy]",
]

[project.scripts]
chatbot = "deltachat_chatbot:main"

[tool.setuptools_scm]
# can be empty if no extra settings are needed, presence enables setuptools_scm

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = "True"
